[tool.poetry]
name = "token-healing"
version = "0.1.0"
description = ""
authors = ["Ahmed Moubtahij"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "token_healing"}]

[tool.poetry.dependencies]
python = "^3.10"
outlines = "^0.0.19"

[tool.poetry.group.test.dependencies]
auto-gptq = "^0.6.0"
protobuf = "^4.25.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pylint = "^3.0.3"
pyright = "^1.1.342"

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pyright]
ignore = ["example.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
