[tool.poetry]
name = "token-healing"
version = "0.1.0"
description = ""
authors = ["Ahmed Moubtahij"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "token_healing"}]

[tool.poetry.dependencies]
python = "^3.10"
pygtrie = "^2.5.0"

[tool.poetry.group.test.dependencies]
auto-gptq = "^0.6.0"
protobuf = "^4.25.1"
optimum = "^1.16.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pylint = "^3.0.3"
pyright = "^1.1.342"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "outlines"
ignore_errors = true

[tool.pylint]
ignore = ["example.py"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
]

[tool.pyright]
ignore = ["example.py"]
reportPrivateImportUsage = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
