[tool.poetry]
name = "tokenhealing"
version = "0.1.0"
description = ""
authors = ["Ahmed Moubtahij"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "tokenhealing"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.36.2"

[tool.poetry.group.test.dependencies]
auto-gptq = "^0.6.0"
protobuf = "^4.25.1"
optimum = "^1.16.1"
parameterized = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pylint = "^3.0.3"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
ignore = ["example.py"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "multiple-statements",
    "too-few-public-methods",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
